students/RovneykoZakhar/task_02/src/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web40
  namespace: app40
  labels:
    app: web40
    org.bstu.course: "RSIOT"
    org.bstu.student.id: "220022"
    org.bstu.group: "AS-64"
    org.bstu.variant: "40"
    org.bstu.owner: "Zaharihnio"
    org.bstu.student.slug: "AS64-220022-v40"
  annotations:
    org.bstu.group: "АС-64"
spec:
  type: ClusterIP
  selector:
    app: web40
  ports:
    - name: http
      port: 8004
      targetPort: http
